chandeliers-lus/tests/fail/ui/causality/redef-var-io.rs
chandeliers_lus::decl! {
    node foo(a : int) returns (a : bool);
    let a = true; tel
}

fn main() {}
