chandeliers-lus/tests/fail/ui/causality/redef-var-io.stderr
error: Cannot redefine Variable `a` (already provided by the context)
 --> tests/fail/ui/causality/redef-var-io.rs:3:9
  |
3 |     let a = true; tel
  |         ^^^^^^^^
